# SONATA

./: .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  2d_structural_crosssection.py  CHANGELOG.md  CONTRIBUTING.md  Intersect_and_trim_utils.py  LICENSE  MAIN.py  README.md  SONATA.py  SONATA_CBM.py  SONATA_CBM_PYMORE.py  SONATA_fast_init.py  SONATA_init.py  SONATA_mdao.py  airfoil.stp  anbax_BAR00.txt  cobyla_testbed.py  config0.rcv  core_operations_utils.py  doe_utl.py  environment.yaml  environment.yml  exec_doe.py  genetic_algoritm_testbed.py  how_to_install.txt  license.txt  marc_dummy.py  marc_fanplot.py  marc_fuscoupling.py  marc_horiFlight.py  marc_hover.py  marc_mdao_testbed.py  marc_rotortestrig.py  mat_database.input  mesh.py  offset_approximation_method.py  offset_approximation_method_5.py  (+55 more)
SONATA/: 3Dinput.py  AREA_Blatt_L.igs  AREA_Blatt_L.stl  AREA_Blatt_L_SS.stp  AREA_R250_SONATA.CATPart  AREA_R250_SONATA.igs  AREA_R250_SONATA.stp  BSplineLst_utils.py  CADinput.py  ExampleBlade_1.CATPart  ExampleBlade_1.igs  ExampleBlade_1.stl  ExampleBlade_1.stp  MAIN.py  SONATA.py  SONATA_export.tex  SSuesse1.CATPart  SSuesse1.igs  SSuesse1.stp  SSusse2.CATPart  SSusse2.igs  SSusse2.stp  SimpleGui.py  VABS_R1600.CATPart  VABS_interface.py  blade_utl.py  cbm.py  cell.py  classAirfoil.py  classBlade.py  classComponent.py  classHelicopter.py  classMaterial.py  classPolar.py  classWindturbine.py  cutoff.py  display.py  display_mesh.py  display_utils.py  elements.mat  (+26 more)
VABS/: EULA.txt  Readme.txt  VABS_Start.bat  uninstall_l.ifl
conda.recipe/: meta.yaml
docs/: Makefile  (+7 more)
(+430 files in other folders)
