[metadata]
name = primer_2020

version = 0.3.4

author = Tobias Pflumm
author_email = tobias.pflumm@tum.de
maintainer = Tobias Pflumm
maintainer_email = tobias.pflumm@tum.de

platforms = Linux
license = MIT

url = https://gitlab.lrz.de/gu32kij/SONATA
#download_url = https://gitlab.lrz.de/gu32kij/SONATA

description = Multidiciplinary Rotor Blade Design Environment for Structural Optimization and Aeroelastic Analysis
long_description = file: README.md
long_descriptison_content_type = text/markdown

keywords =
    Helicopter
    Rotor Blade
    OpenMdao
    Preprocessor
    SONATA
    VABS

[options]
packages = find:

[tool:pytest]
addopts = --doctest-modules

[pydocstyle]
convention=numpy
match_dir = SONATA
